src/parser.yy
%skeleton "lalr1.cc"
%require "3.0"
%debug
%defines
%define api.namespace{DTL}
%define api.parser.class {Parser}
%define api.value.type variant
%define parse.error verbose
%output "parser.cc"
%token-table



%code requires{
	#include <list>
	#include "tokens.hpp"
	#include "transform_graph.hpp"
	namespace DTL {
		class Scanner;
	}


//The following definition is required when 
// we don't use the %locations directive (which we won't)
# ifndef YY_NULLPTR
#  if defined __cplusplus && 201103L <= __cplusplus
#   define YY_NULLPTR nullptr
#  else
#   define YY_NULLPTR 0
#  endif
# endif

//End "requires" code
}

%parse-param { DTL::Scanner &scanner }
%parse-param { DTL::TransformGraph** root}
%code {
   // C std code for utility functions
   #include <iostream>
   #include <cstdlib>
   #include <fstream>
   #include <algorithm>

   // Our code for interoperation between scanner/parser
   #include "scanner.hpp"
   #include "ast.hpp"
   #include "tokens.hpp"

  //Request tokens from our scanner member, not 
  // from a global function
  #undef yylex
  #define yylex scanner.yylex



}

%token                       END   0 "end file"
%token	<DTL::Token *>       ASSIGN
%token  <DTL::Token *>       NOPT
%token	<DTL::IDToken *>     ID
%token	<DTL::Token *>       INT
%token	<DTL::IntLitToken *> INTLITERAL
%token	<DTL::Token *>       LCURLY
%token	<DTL::Token *>       LESS
%token	<DTL::Token *>       LESSEQUAL
%token	<DTL::Token *>       GREATER
%token	<DTL::Token *>       GREATEREQUAL
%token	<DTL::Token *>       LPAREN
%token	<DTL::Token *>       CROSS
%token	<DTL::Token *>       POSTINC
%token	<DTL::Token *>       RCURLY
%token	<DTL::Token *>       RPAREN
%token	<DTL::Token *>       SEMICOL
%token	<DTL::Token *>       STAR
%token  <DTL::Token *>       FOR
%token  <DTL::Token *>       OUT
%token  <DTL::Token *>       COMMA
%token  <DTL::Token *>       LBRACKET
%token  <DTL::Token *>       RBRACKET
%token  <DTL::Token *>       MINUS
%token  <DTL::Token *>       COLON
%token  <DTL::Token *>       CASE
%token  <DTL::Token *>       SWITCH
%token  <DTL::Token *>       IF
%token  <DTL::Token *>       ELSE
%token  <DTL::Token *>       ISEVEN
%token  <DTL::Token *>       ISEDGE
%token  <DTL::Token *>       OR
%token  <DTL::Token *>       AND
%token  <DTL::Token *>       PAD
%token  <DTL::Token *>       METADATASTREAM
%token  <DTL::Token *>       DTL
%token  <DTL::Token *>       ACTIVE

%left LESS
%left CROSS
%left MINUS
%left STAR


%type <DTL::ProgramNode*> program
%type <DTL::ExpNode*> factor
%type <DTL::ExpNode*> term
%type <DTL::ExpNode*> expr
%type <DTL::StmtNode*> unarystmt
%type <DTL::StmtNode*> constdecl
%type <std::vector<IntLitNode*>> intlist 
%type <DTL::ForStmtNode*> forstatement
%type <std::vector<DTL::StmtNode*>> constdecls
%type <std::vector<DTL::StmtNode*>> outstatements
%type <std::vector<DTL::StmtNode*>> innernest
%type <DTL::StmtNode*> outstatement
%type <DTL::StmtNode*> ifstatement
%type <DTL::StmtNode*> switchstatement
%type <std::vector<std::vector<DTL::StmtNode*>>> casestatements
%type <std::vector<DTL::StmtNode*>> casestatement
%type <DTL::LocNode*> loc
%type <DTL::TypeNode*> type
%type <DTL::IntLitNode*> intlit
%type <DTL::IDNode*> id
%type <DTL::MetadataStreamDeclNode*> metadatastreamdecl
%type <DTL::TransformGraph*> transformgraph
%type <DTL::IDNode*> activenode
%type <std::vector<DTL::DTLKernelNode*>> kernellist
%type <DTL::DTLKernelNode*> kernel
%type <std::vector<DTL::IDNode*>> inputlistwrapper
%type <std::vector<DTL::IDNode*>> inputlist


%%
transformgraph: kernellist activenode
        {
            $$ = new TransformGraph($1, $2);
            *root = $$;
        }

activenode : ACTIVE id SEMICOL
        {
            $$ = $2;
        }

kernellist: kernel kernellist
        {
            $$ = std::vector<DTL::DTLKernelNode*>();
            $$.push_back($1);
            $$.insert($$.end(), $2.begin(), $2.end());
        }
        | /* empty */
        {
            $$ = std::vector<DTL::DTLKernelNode*>();
        }


kernel: DTL id inputlistwrapper ASSIGN LCURLY program RCURLY
        {
            $$ = new DTLKernelNode($2, $3, $6);
        }

inputlistwrapper: COLON inputlist
        {
            $$ = $2;
        }
        |
        {
            $$ = std::vector<IDNode*>();
        }

inputlist: id COMMA inputlist
        {
            $$ = std::vector<IDNode*>();
            $$.push_back($1);
            $$.insert($$.end(), $3.begin(), $3.end());
        }
        | id
        {
            $$ = std::vector<IDNode*>();
            $$.push_back($1);
        }


program: constdecls forstatement 
        {
            $1.push_back($2);
            $$ = new ProgramNode($1);
  
        }
constdecls: constdecls constdecl
        {
            $1.push_back($2);
            $$ = $1;
        }
        | constdecls metadatastreamdecl
        {
            $1.push_back($2);
            $$ = $1;
        }
        | /* empty */ 
        {
            auto ret = std::vector<DTL::StmtNode*>();
            $$ = ret;
        }

metadatastreamdecl: METADATASTREAM LESS intlit COMMA intlit GREATER id SEMICOL
        {
            const Position * p = new Position($1->pos(), $8->pos());
            $$ = new MetadataStreamDeclNode(p, new MetadataStreamTypeNode($1->pos()), $7, $3, $5);
        }

constdecl: type id ASSIGN intlit SEMICOL
        {
            const Position * p = new Position($1->pos(), $5->pos());
            $$ = new ConstDeclNode(p, $1, $2, $4);
        }
        | NOPT type id ASSIGN intlit SEMICOL
        {
            const Position * p = new Position($2->pos(), $6->pos());
            auto decl = new ConstDeclNode(p, $2, $3, $5);
            decl->SetOpt(false);
            $$ = decl;
        }
        | type id ASSIGN LCURLY intlist RCURLY SEMICOL
        {
             const Position * p = new Position($1->pos(), $6->pos());
            $$ = new ConstArrayDeclNode($1->pos(), $1, $2, $5);
        }


intlist: intlit COMMA intlist
        {
            $$ = std::vector<DTL::IntLitNode*>();
            $$.push_back($1);
            $$.insert($$.end(), $3.begin(), $3.end());
        }
        | intlit
        {
            $$ = std::vector<DTL::IntLitNode*>();
            $$.push_back($1);
        }
        | /* empty */ 
        {
            $$ = std::vector<DTL::IntLitNode*>();
        }



forstatement: FOR LPAREN constdecl expr SEMICOL unarystmt RPAREN LCURLY forstatement RCURLY
        {
            const Position * p = new Position($1->pos(), $10->pos());
            std::vector<StmtNode*> stmt_vec;
            stmt_vec.push_back($9);
            $$ = new ForStmtNode(p, $3, $4, $6, stmt_vec);

        }
        | FOR LPAREN constdecl expr SEMICOL unarystmt RPAREN LCURLY innernest RCURLY
        {
            const Position * p = new Position($1->pos(), $10->pos());
            $$ = new ForStmtNode(p, $3, $4, $6, $9);
        }
outstatements : outstatements outstatement
        {
            $1.push_back($2);
            $$ = $1;
        }
        | outstatement
        {
            std::vector<StmtNode*> stmt_vec;
            stmt_vec.push_back($1);
            $$ = stmt_vec;
        }


innernest: outstatements
    {
        $$ = $1;
    }
    | ifstatement
    {
        $$ = {$1};
    }
    | switchstatement
    {
        $$ = {$1};
    }

ifstatement : IF LPAREN ISEVEN id RPAREN LCURLY outstatements RCURLY ELSE LCURLY outstatements RCURLY
        {
            $$ = new IfStmtNode($1->pos(), std::vector<IDNode*>{$4}, $7, $11, IFSTMTTYPE::IS_EVEN);
        }
        | IF LPAREN id LESS id RPAREN LCURLY outstatements RCURLY ELSE LCURLY outstatements RCURLY
        {
            $$ = new IfStmtNode($1->pos(), std::vector<IDNode*>{$3,$5}, $8, $12, IFSTMTTYPE::LT);
        }
        | IF LPAREN id LESSEQUAL id RPAREN LCURLY outstatements RCURLY ELSE LCURLY outstatements RCURLY
        {
            $$ = new IfStmtNode($1->pos(), std::vector<IDNode*>{$3,$5}, $8, $12, IFSTMTTYPE::LTE);
        }
        | IF LPAREN id GREATER id RPAREN LCURLY outstatements RCURLY ELSE LCURLY outstatements RCURLY
        {
            $$ = new IfStmtNode($1->pos(), std::vector<IDNode*>{$3,$5}, $8, $12, IFSTMTTYPE::GT);
        }
        | IF LPAREN id GREATEREQUAL id RPAREN LCURLY outstatements RCURLY ELSE LCURLY outstatements RCURLY
        {
            $$ = new IfStmtNode($1->pos(), std::vector<IDNode*>{$3,$5}, $8, $12, IFSTMTTYPE::GTE);
        }
        | IF LPAREN ISEDGE id RPAREN LCURLY outstatements RCURLY ELSE LCURLY outstatements RCURLY
        {
            $$ = new IfStmtNode($1->pos(), std::vector<IDNode*>{$4}, $7,  $11, IFSTMTTYPE::EDGE);
        }
        | IF LPAREN ISEDGE id OR ISEDGE id RPAREN LCURLY outstatements RCURLY ELSE LCURLY outstatements RCURLY
        {
            $$ = new IfStmtNode($1->pos(), std::vector<IDNode*>{$4,$7}, $10, $14, IFSTMTTYPE::EDGE2OR);
        }
        | IF LPAREN ISEDGE id AND ISEDGE id RPAREN LCURLY outstatements RCURLY ELSE LCURLY outstatements RCURLY
        {
            $$ = new IfStmtNode($1->pos(), std::vector<IDNode*>{$4,$7}, $10, $14, IFSTMTTYPE::EDGE2AND);
        }
        | IF LPAREN PAD id id id id RPAREN LCURLY outstatements RCURLY ELSE LCURLY outstatements RCURLY
        {
            std::vector<IDNode*> ids = {$4, $5, $6, $7};
            $$ = new IfStmtNode($1->pos(), ids, $10, $14, IFSTMTTYPE::PAD);
        }







switchstatement : SWITCH LPAREN id RPAREN LCURLY casestatements RCURLY
        {
            std::reverse($6.begin(), $6.end());
            $$ = new SwitchStmtNode($1->pos(), $3, $6);
        }


casestatements : casestatement casestatements
    {    
        $2.push_back($1);
        $$ = $2;
    }
    | casestatement
    {
        $$ = {$1};
    }

casestatement : CASE COLON outstatements
    {
        $$ = $3;
    }



outstatement : OUT ASSIGN expr SEMICOL
            {
                const Position * p = new Position($1->pos(), $4->pos());
                $$ = new OutStmtNode(p, $3);
            }

type : INT // we may add other types?
    {
        $$ = new IntTypeNode($1->pos());
    }
expr: expr CROSS expr
    {
        const Position * p = new Position($1->pos(), $3->pos());
        $$ = new PlusNode(p, $1, $3);
    }
    | expr LESS expr
    {
        const Position * p = new Position($1->pos(), $3->pos());
        $$ = new LessNode(p, $1, $3);
    }
    | expr STAR expr
    {
        const Position * p = new Position($1->pos(), $3->pos());
        $$ = new TimesNode(p, $1, $3);
    }
    | expr MINUS expr
    {
        const Position * p = new Position($1->pos(), $3->pos());
        $$ = new MinusNode(p, $1, $3);
    }
    | term
    {
        $$ = $1;
    }

unarystmt: loc POSTINC
        {
            const Position* p = new Position($1->pos(), $2->pos());
            $$ = new PostIncStmtNode(p, $1);
        }



term: factor 
    {
        $$ = $1;
    }
    | LPAREN expr RPAREN
    {
        $$ = $2;
    }
factor: intlit
    {
        $$ = $1;
    }
    | loc 
    {
        $$ = $1;
    }
intlit : INTLITERAL
    {
        $$ = new IntLitNode($1->pos(), $1->num());
    }

loc : id
    {
        $$ = $1;
    }
    | id LBRACKET id RBRACKET
    {
        $$ = new ArrayIndexNode($1->pos(), $1, $3);
    }

id : ID
    {
        $$ = new IDNode($1->pos(), $1->value());
    }




%%


void DTL::Parser::error(const std::string& msg) {

	std::cout << msg << std::endl;
	std::cerr << "syntax error" << std::endl;
}
