parser.output
Grammar

    0 $accept: transformgraph "end file"

    1 transformgraph: kernellist activenode

    2 activenode: ACTIVE id SEMICOL

    3 kernellist: kernel kernellist
    4           | ε

    5 kernel: DTL id inputlistwrapper ASSIGN LCURLY program RCURLY

    6 inputlistwrapper: COLON inputlist
    7                 | ε

    8 inputlist: id COMMA inputlist
    9          | id

   10 program: constdecls forstatement

   11 constdecls: constdecls constdecl
   12           | constdecls metadatastreamdecl
   13           | ε

   14 metadatastreamdecl: METADATASTREAM LESS intlit COMMA intlit GREATER id SEMICOL

   15 constdecl: type id ASSIGN intlit SEMICOL
   16          | NOPT type id ASSIGN intlit SEMICOL
   17          | type id ASSIGN LCURLY intlist RCURLY SEMICOL

   18 intlist: intlit COMMA intlist
   19        | intlit
   20        | ε

   21 forstatement: FOR LPAREN constdecl expr SEMICOL unarystmt RPAREN LCURLY forstatement RCURLY
   22             | FOR LPAREN constdecl expr SEMICOL unarystmt RPAREN LCURLY innernest RCURLY

   23 outstatements: outstatements outstatement
   24              | outstatement

   25 innernest: outstatements
   26          | ifstatement
   27          | switchstatement

   28 ifstatement: IF LPAREN ISEVEN id RPAREN LCURLY outstatements RCURLY ELSE LCURLY outstatements RCURLY
   29            | IF LPAREN id LESS id RPAREN LCURLY outstatements RCURLY ELSE LCURLY outstatements RCURLY
   30            | IF LPAREN id LESSEQUAL id RPAREN LCURLY outstatements RCURLY ELSE LCURLY outstatements RCURLY
   31            | IF LPAREN id GREATER id RPAREN LCURLY outstatements RCURLY ELSE LCURLY outstatements RCURLY
   32            | IF LPAREN id GREATEREQUAL id RPAREN LCURLY outstatements RCURLY ELSE LCURLY outstatements RCURLY
   33            | IF LPAREN ISEDGE id RPAREN LCURLY outstatements RCURLY ELSE LCURLY outstatements RCURLY
   34            | IF LPAREN ISEDGE id OR ISEDGE id RPAREN LCURLY outstatements RCURLY ELSE LCURLY outstatements RCURLY
   35            | IF LPAREN ISEDGE id AND ISEDGE id RPAREN LCURLY outstatements RCURLY ELSE LCURLY outstatements RCURLY
   36            | IF LPAREN PAD id id id id RPAREN LCURLY outstatements RCURLY ELSE LCURLY outstatements RCURLY

   37 switchstatement: SWITCH LPAREN id RPAREN LCURLY casestatements RCURLY

   38 casestatements: casestatement casestatements
   39               | casestatement

   40 casestatement: CASE COLON outstatements

   41 outstatement: OUT ASSIGN expr SEMICOL

   42 type: INT

   43 expr: expr CROSS expr
   44     | expr LESS expr
   45     | expr STAR expr
   46     | expr MINUS expr
   47     | term

   48 unarystmt: loc POSTINC

   49 term: factor
   50     | LPAREN expr RPAREN

   51 factor: intlit
   52       | loc

   53 intlit: INTLITERAL

   54 loc: id
   55    | id LBRACKET id RBRACKET

   56 id: ID


Terminals, with rules where they appear

    "end file" (0) 0
    error (256)
    ASSIGN <DTL::Token *> (258) 5 15 16 17 41
    NOPT <DTL::Token *> (259) 16
    ID <DTL::IDToken *> (260) 56
    INT <DTL::Token *> (261) 42
    INTLITERAL <DTL::IntLitToken *> (262) 53
    LCURLY <DTL::Token *> (263) 5 17 21 22 28 29 30 31 32 33 34 35 36 37
    LESS <DTL::Token *> (264) 14 29 44
    LESSEQUAL <DTL::Token *> (265) 30
    GREATER <DTL::Token *> (266) 14 31
    GREATEREQUAL <DTL::Token *> (267) 32
    LPAREN <DTL::Token *> (268) 21 22 28 29 30 31 32 33 34 35 36 37 50
    CROSS <DTL::Token *> (269) 43
    POSTINC <DTL::Token *> (270) 48
    RCURLY <DTL::Token *> (271) 5 17 21 22 28 29 30 31 32 33 34 35 36 37
    RPAREN <DTL::Token *> (272) 21 22 28 29 30 31 32 33 34 35 36 37 50
    SEMICOL <DTL::Token *> (273) 2 14 15 16 17 21 22 41
    STAR <DTL::Token *> (274) 45
    FOR <DTL::Token *> (275) 21 22
    OUT <DTL::Token *> (276) 41
    COMMA <DTL::Token *> (277) 8 14 18
    LBRACKET <DTL::Token *> (278) 55
    RBRACKET <DTL::Token *> (279) 55
    MINUS <DTL::Token *> (280) 46
    COLON <DTL::Token *> (281) 6 40
    CASE <DTL::Token *> (282) 40
    SWITCH <DTL::Token *> (283) 37
    IF <DTL::Token *> (284) 28 29 30 31 32 33 34 35 36
    ELSE <DTL::Token *> (285) 28 29 30 31 32 33 34 35 36
    ISEVEN <DTL::Token *> (286) 28
    ISEDGE <DTL::Token *> (287) 33 34 35
    OR <DTL::Token *> (288) 34
    AND <DTL::Token *> (289) 35
    PAD <DTL::Token *> (290) 36
    METADATASTREAM <DTL::Token *> (291) 14
    DTL <DTL::Token *> (292) 5
    ACTIVE <DTL::Token *> (293) 2


Nonterminals, with rules where they appear

    $accept (39)
        on left: 0
    transformgraph <DTL::TransformGraph*> (40)
        on left: 1
        on right: 0
    activenode <DTL::IDNode*> (41)
        on left: 2
        on right: 1
    kernellist <std::vector<DTL::DTLKernelNode*>> (42)
        on left: 3 4
        on right: 1 3
    kernel <DTL::DTLKernelNode*> (43)
        on left: 5
        on right: 3
    inputlistwrapper <std::vector<DTL::IDNode*>> (44)
        on left: 6 7
        on right: 5
    inputlist <std::vector<DTL::IDNode*>> (45)
        on left: 8 9
        on right: 6 8
    program <DTL::ProgramNode*> (46)
        on left: 10
        on right: 5
    constdecls <std::vector<DTL::StmtNode*>> (47)
        on left: 11 12 13
        on right: 10 11 12
    metadatastreamdecl <DTL::MetadataStreamDeclNode*> (48)
        on left: 14
        on right: 12
    constdecl <DTL::StmtNode*> (49)
        on left: 15 16 17
        on right: 11 21 22
    intlist <std::vector<IntLitNode*>> (50)
        on left: 18 19 20
        on right: 17 18
    forstatement <DTL::ForStmtNode*> (51)
        on left: 21 22
        on right: 10 21
    outstatements <std::vector<DTL::StmtNode*>> (52)
        on left: 23 24
        on right: 23 25 28 29 30 31 32 33 34 35 36 40
    innernest <std::vector<DTL::StmtNode*>> (53)
        on left: 25 26 27
        on right: 22
    ifstatement <DTL::StmtNode*> (54)
        on left: 28 29 30 31 32 33 34 35 36
        on right: 26
    switchstatement <DTL::StmtNode*> (55)
        on left: 37
        on right: 27
    casestatements <std::vector<std::vector<DTL::StmtNode*>>> (56)
        on left: 38 39
        on right: 37 38
    casestatement <std::vector<DTL::StmtNode*>> (57)
        on left: 40
        on right: 38 39
    outstatement <DTL::StmtNode*> (58)
        on left: 41
        on right: 23 24
    type <DTL::TypeNode*> (59)
        on left: 42
        on right: 15 16 17
    expr <DTL::ExpNode*> (60)
        on left: 43 44 45 46 47
        on right: 21 22 41 43 44 45 46 50
    unarystmt <DTL::StmtNode*> (61)
        on left: 48
        on right: 21 22
    term <DTL::ExpNode*> (62)
        on left: 49 50
        on right: 47
    factor <DTL::ExpNode*> (63)
        on left: 51 52
        on right: 49
    intlit <DTL::IntLitNode*> (64)
        on left: 53
        on right: 14 15 16 18 19 51
    loc <DTL::LocNode*> (65)
        on left: 54 55
        on right: 48 52
    id <DTL::IDNode*> (66)
        on left: 56
        on right: 2 5 8 9 14 15 16 17 28 29 30 31 32 33 34 35 36 37 54 55


State 0

    0 $accept: • transformgraph "end file"

    DTL  shift, and go to state 1

    $default  reduce using rule 4 (kernellist)

    transformgraph  go to state 2
    kernellist      go to state 3
    kernel          go to state 4


State 1

    5 kernel: DTL • id inputlistwrapper ASSIGN LCURLY program RCURLY

    ID  shift, and go to state 5

    id  go to state 6


State 2

    0 $accept: transformgraph • "end file"

    "end file"  shift, and go to state 7


State 3

    1 transformgraph: kernellist • activenode

    ACTIVE  shift, and go to state 8

    activenode  go to state 9


State 4

    3 kernellist: kernel • kernellist

    DTL  shift, and go to state 1

    $default  reduce using rule 4 (kernellist)

    kernellist  go to state 10
    kernel      go to state 4


State 5

   56 id: ID •

    $default  reduce using rule 56 (id)


State 6

    5 kernel: DTL id • inputlistwrapper ASSIGN LCURLY program RCURLY

    COLON  shift, and go to state 11

    $default  reduce using rule 7 (inputlistwrapper)

    inputlistwrapper  go to state 12


State 7

    0 $accept: transformgraph "end file" •

    $default  accept


State 8

    2 activenode: ACTIVE • id SEMICOL

    ID  shift, and go to state 5

    id  go to state 13


State 9

    1 transformgraph: kernellist activenode •

    $default  reduce using rule 1 (transformgraph)


State 10

    3 kernellist: kernel kernellist •

    $default  reduce using rule 3 (kernellist)


State 11

    6 inputlistwrapper: COLON • inputlist

    ID  shift, and go to state 5

    inputlist  go to state 14
    id         go to state 15


State 12

    5 kernel: DTL id inputlistwrapper • ASSIGN LCURLY program RCURLY

    ASSIGN  shift, and go to state 16


State 13

    2 activenode: ACTIVE id • SEMICOL

    SEMICOL  shift, and go to state 17


State 14

    6 inputlistwrapper: COLON inputlist •

    $default  reduce using rule 6 (inputlistwrapper)


State 15

    8 inputlist: id • COMMA inputlist
    9          | id •

    COMMA  shift, and go to state 18

    $default  reduce using rule 9 (inputlist)


State 16

    5 kernel: DTL id inputlistwrapper ASSIGN • LCURLY program RCURLY

    LCURLY  shift, and go to state 19


State 17

    2 activenode: ACTIVE id SEMICOL •

    $default  reduce using rule 2 (activenode)


State 18

    8 inputlist: id COMMA • inputlist

    ID  shift, and go to state 5

    inputlist  go to state 20
    id         go to state 15


State 19

    5 kernel: DTL id inputlistwrapper ASSIGN LCURLY • program RCURLY

    $default  reduce using rule 13 (constdecls)

    program     go to state 21
    constdecls  go to state 22


State 20

    8 inputlist: id COMMA inputlist •

    $default  reduce using rule 8 (inputlist)


State 21

    5 kernel: DTL id inputlistwrapper ASSIGN LCURLY program • RCURLY

    RCURLY  shift, and go to state 23


State 22

   10 program: constdecls • forstatement
   11 constdecls: constdecls • constdecl
   12           | constdecls • metadatastreamdecl

    NOPT            shift, and go to state 24
    INT             shift, and go to state 25
    FOR             shift, and go to state 26
    METADATASTREAM  shift, and go to state 27

    metadatastreamdecl  go to state 28
    constdecl           go to state 29
    forstatement        go to state 30
    type                go to state 31


State 23

    5 kernel: DTL id inputlistwrapper ASSIGN LCURLY program RCURLY •

    $default  reduce using rule 5 (kernel)


State 24

   16 constdecl: NOPT • type id ASSIGN intlit SEMICOL

    INT  shift, and go to state 25

    type  go to state 32


State 25

   42 type: INT •

    $default  reduce using rule 42 (type)


State 26

   21 forstatement: FOR • LPAREN constdecl expr SEMICOL unarystmt RPAREN LCURLY forstatement RCURLY
   22             | FOR • LPAREN constdecl expr SEMICOL unarystmt RPAREN LCURLY innernest RCURLY

    LPAREN  shift, and go to state 33


State 27

   14 metadatastreamdecl: METADATASTREAM • LESS intlit COMMA intlit GREATER id SEMICOL

    LESS  shift, and go to state 34


State 28

   12 constdecls: constdecls metadatastreamdecl •

    $default  reduce using rule 12 (constdecls)


State 29

   11 constdecls: constdecls constdecl •

    $default  reduce using rule 11 (constdecls)


State 30

   10 program: constdecls forstatement •

    $default  reduce using rule 10 (program)


State 31

   15 constdecl: type • id ASSIGN intlit SEMICOL
   17          | type • id ASSIGN LCURLY intlist RCURLY SEMICOL

    ID  shift, and go to state 5

    id  go to state 35


State 32

   16 constdecl: NOPT type • id ASSIGN intlit SEMICOL

    ID  shift, and go to state 5

    id  go to state 36


State 33

   21 forstatement: FOR LPAREN • constdecl expr SEMICOL unarystmt RPAREN LCURLY forstatement RCURLY
   22             | FOR LPAREN • constdecl expr SEMICOL unarystmt RPAREN LCURLY innernest RCURLY

    NOPT  shift, and go to state 24
    INT   shift, and go to state 25

    constdecl  go to state 37
    type       go to state 31


State 34

   14 metadatastreamdecl: METADATASTREAM LESS • intlit COMMA intlit GREATER id SEMICOL

    INTLITERAL  shift, and go to state 38

    intlit  go to state 39


State 35

   15 constdecl: type id • ASSIGN intlit SEMICOL
   17          | type id • ASSIGN LCURLY intlist RCURLY SEMICOL

    ASSIGN  shift, and go to state 40


State 36

   16 constdecl: NOPT type id • ASSIGN intlit SEMICOL

    ASSIGN  shift, and go to state 41


State 37

   21 forstatement: FOR LPAREN constdecl • expr SEMICOL unarystmt RPAREN LCURLY forstatement RCURLY
   22             | FOR LPAREN constdecl • expr SEMICOL unarystmt RPAREN LCURLY innernest RCURLY

    ID          shift, and go to state 5
    INTLITERAL  shift, and go to state 38
    LPAREN      shift, and go to state 42

    expr    go to state 43
    term    go to state 44
    factor  go to state 45
    intlit  go to state 46
    loc     go to state 47
    id      go to state 48


State 38

   53 intlit: INTLITERAL •

    $default  reduce using rule 53 (intlit)


State 39

   14 metadatastreamdecl: METADATASTREAM LESS intlit • COMMA intlit GREATER id SEMICOL

    COMMA  shift, and go to state 49


State 40

   15 constdecl: type id ASSIGN • intlit SEMICOL
   17          | type id ASSIGN • LCURLY intlist RCURLY SEMICOL

    INTLITERAL  shift, and go to state 38
    LCURLY      shift, and go to state 50

    intlit  go to state 51


State 41

   16 constdecl: NOPT type id ASSIGN • intlit SEMICOL

    INTLITERAL  shift, and go to state 38

    intlit  go to state 52


State 42

   50 term: LPAREN • expr RPAREN

    ID          shift, and go to state 5
    INTLITERAL  shift, and go to state 38
    LPAREN      shift, and go to state 42

    expr    go to state 53
    term    go to state 44
    factor  go to state 45
    intlit  go to state 46
    loc     go to state 47
    id      go to state 48


State 43

   21 forstatement: FOR LPAREN constdecl expr • SEMICOL unarystmt RPAREN LCURLY forstatement RCURLY
   22             | FOR LPAREN constdecl expr • SEMICOL unarystmt RPAREN LCURLY innernest RCURLY
   43 expr: expr • CROSS expr
   44     | expr • LESS expr
   45     | expr • STAR expr
   46     | expr • MINUS expr

    LESS     shift, and go to state 54
    CROSS    shift, and go to state 55
    SEMICOL  shift, and go to state 56
    STAR     shift, and go to state 57
    MINUS    shift, and go to state 58


State 44

   47 expr: term •

    $default  reduce using rule 47 (expr)


State 45

   49 term: factor •

    $default  reduce using rule 49 (term)


State 46

   51 factor: intlit •

    $default  reduce using rule 51 (factor)


State 47

   52 factor: loc •

    $default  reduce using rule 52 (factor)


State 48

   54 loc: id •
   55    | id • LBRACKET id RBRACKET

    LBRACKET  shift, and go to state 59

    $default  reduce using rule 54 (loc)


State 49

   14 metadatastreamdecl: METADATASTREAM LESS intlit COMMA • intlit GREATER id SEMICOL

    INTLITERAL  shift, and go to state 38

    intlit  go to state 60


State 50

   17 constdecl: type id ASSIGN LCURLY • intlist RCURLY SEMICOL

    INTLITERAL  shift, and go to state 38

    $default  reduce using rule 20 (intlist)

    intlist  go to state 61
    intlit   go to state 62


State 51

   15 constdecl: type id ASSIGN intlit • SEMICOL

    SEMICOL  shift, and go to state 63


State 52

   16 constdecl: NOPT type id ASSIGN intlit • SEMICOL

    SEMICOL  shift, and go to state 64


State 53

   43 expr: expr • CROSS expr
   44     | expr • LESS expr
   45     | expr • STAR expr
   46     | expr • MINUS expr
   50 term: LPAREN expr • RPAREN

    LESS    shift, and go to state 54
    CROSS   shift, and go to state 55
    RPAREN  shift, and go to state 65
    STAR    shift, and go to state 57
    MINUS   shift, and go to state 58


State 54

   44 expr: expr LESS • expr

    ID          shift, and go to state 5
    INTLITERAL  shift, and go to state 38
    LPAREN      shift, and go to state 42

    expr    go to state 66
    term    go to state 44
    factor  go to state 45
    intlit  go to state 46
    loc     go to state 47
    id      go to state 48


State 55

   43 expr: expr CROSS • expr

    ID          shift, and go to state 5
    INTLITERAL  shift, and go to state 38
    LPAREN      shift, and go to state 42

    expr    go to state 67
    term    go to state 44
    factor  go to state 45
    intlit  go to state 46
    loc     go to state 47
    id      go to state 48


State 56

   21 forstatement: FOR LPAREN constdecl expr SEMICOL • unarystmt RPAREN LCURLY forstatement RCURLY
   22             | FOR LPAREN constdecl expr SEMICOL • unarystmt RPAREN LCURLY innernest RCURLY

    ID  shift, and go to state 5

    unarystmt  go to state 68
    loc        go to state 69
    id         go to state 48


State 57

   45 expr: expr STAR • expr

    ID          shift, and go to state 5
    INTLITERAL  shift, and go to state 38
    LPAREN      shift, and go to state 42

    expr    go to state 70
    term    go to state 44
    factor  go to state 45
    intlit  go to state 46
    loc     go to state 47
    id      go to state 48


State 58

   46 expr: expr MINUS • expr

    ID          shift, and go to state 5
    INTLITERAL  shift, and go to state 38
    LPAREN      shift, and go to state 42

    expr    go to state 71
    term    go to state 44
    factor  go to state 45
    intlit  go to state 46
    loc     go to state 47
    id      go to state 48


State 59

   55 loc: id LBRACKET • id RBRACKET

    ID  shift, and go to state 5

    id  go to state 72


State 60

   14 metadatastreamdecl: METADATASTREAM LESS intlit COMMA intlit • GREATER id SEMICOL

    GREATER  shift, and go to state 73


State 61

   17 constdecl: type id ASSIGN LCURLY intlist • RCURLY SEMICOL

    RCURLY  shift, and go to state 74


State 62

   18 intlist: intlit • COMMA intlist
   19        | intlit •

    COMMA  shift, and go to state 75

    $default  reduce using rule 19 (intlist)


State 63

   15 constdecl: type id ASSIGN intlit SEMICOL •

    $default  reduce using rule 15 (constdecl)


State 64

   16 constdecl: NOPT type id ASSIGN intlit SEMICOL •

    $default  reduce using rule 16 (constdecl)


State 65

   50 term: LPAREN expr RPAREN •

    $default  reduce using rule 50 (term)


State 66

   43 expr: expr • CROSS expr
   44     | expr • LESS expr
   44     | expr LESS expr •
   45     | expr • STAR expr
   46     | expr • MINUS expr

    CROSS  shift, and go to state 55
    STAR   shift, and go to state 57
    MINUS  shift, and go to state 58

    $default  reduce using rule 44 (expr)


State 67

   43 expr: expr • CROSS expr
   43     | expr CROSS expr •
   44     | expr • LESS expr
   45     | expr • STAR expr
   46     | expr • MINUS expr

    STAR   shift, and go to state 57
    MINUS  shift, and go to state 58

    $default  reduce using rule 43 (expr)


State 68

   21 forstatement: FOR LPAREN constdecl expr SEMICOL unarystmt • RPAREN LCURLY forstatement RCURLY
   22             | FOR LPAREN constdecl expr SEMICOL unarystmt • RPAREN LCURLY innernest RCURLY

    RPAREN  shift, and go to state 76


State 69

   48 unarystmt: loc • POSTINC

    POSTINC  shift, and go to state 77


State 70

   43 expr: expr • CROSS expr
   44     | expr • LESS expr
   45     | expr • STAR expr
   45     | expr STAR expr •
   46     | expr • MINUS expr

    $default  reduce using rule 45 (expr)


State 71

   43 expr: expr • CROSS expr
   44     | expr • LESS expr
   45     | expr • STAR expr
   46     | expr • MINUS expr
   46     | expr MINUS expr •

    STAR  shift, and go to state 57

    $default  reduce using rule 46 (expr)


State 72

   55 loc: id LBRACKET id • RBRACKET

    RBRACKET  shift, and go to state 78


State 73

   14 metadatastreamdecl: METADATASTREAM LESS intlit COMMA intlit GREATER • id SEMICOL

    ID  shift, and go to state 5

    id  go to state 79


State 74

   17 constdecl: type id ASSIGN LCURLY intlist RCURLY • SEMICOL
